syntax = "proto2";

package bgs.protocol.report.v2;

import "google/protobuf/descriptor.proto";
import "bgs/low/pb/client/global_extensions/range.proto";
import "bgs/low/pb/client/global_extensions/field_options.proto";
import "bgs/low/pb/client/global_extensions/message_options.proto";
import "bgs/low/pb/client/entity_types.proto";
import "bgs/low/pb/client/account_types.proto";
import "bgs/low/pb/client/api/client/v2/attribute_types.proto";
import "bgs/low/pb/client/message_types.proto";
import "bgs/low/pb/client/api/client/v2/report_types.proto";
import "bgs/low/pb/client/global_extensions/routing.proto";
import "bgs/low/pb/client/global_extensions/register_method_types.proto";
import "bgs/low/pb/client/global_extensions/method_options.proto";
import "bgs/low/pb/client/global_extensions/service_options.proto";
import "bgs/low/pb/client/rpc_types.proto";

option cc_generic_services = false;

service ReportService {
	rpc SubmitReport(.bgs.protocol.report.v2.SubmitReportRequest) returns(.bgs.protocol.NoData) { 
		option (method_options).id = 1;
		option (method_options).custom_region_resolver = "ResolveSubmitReportRegion";
	}
	option (service_options).descriptor_name = "bnet.protocol.report.v2.ReportService";
	option (service_options).shard_name = "report";
	option (service_options).is_global = true;
	option (sdk_service_options).outbound = true;
}

message SubmitReportRequest {
	optional bgs.protocol.account.v1.AccountId agent_id = 1;
	optional string user_description = 2;
	optional bgs.protocol.report.v2.UserOptions user_options = 10;
	optional bgs.protocol.report.v2.ClubOptions club_options = 11;
	optional bgs.protocol.report.v2.EntityOptions entity_options = 20;
	option (message_options).custom_select_shard = true;
}

